@@ -1,3 +1,9 @@
+2013-02-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
+
+	* rebaseall.in: Remove duplicates from file list.
+	Find DLLs installed via CPAN and similar systems and include them
+	in the default file list.
+
 2013-02-16  Corinna Vinschen  <corinna@vinschen.de>
 
 	* peflags.c (main): Drop unused variable.
